# Benternetopdracht

./: CMakeLists.txt  readme.md  readme.txt
src/: benternet.cpp  benternet.h  main.cpp  tester.cpp
